// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders as form group 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Checkbox
        ariaDescribedby={null}
        className="form__control checkbox"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        test="test"
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with error, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Checkbox
        ariaDescribedby="error-guid-1"
        className="form__control checkbox"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        test="test"
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        foo
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      />
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText and error, using two aria-describedby attributes 1`] = `
<Fragment>
  <div
    className="form__group has-error"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Checkbox
        ariaDescribedby="error-guid-1 help-guid-1"
        className="form__control checkbox"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        test="test"
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      >
        bar
      </ErrorBlock>
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders as form group, with helpText, using the aria-describedby attribute 1`] = `
<Fragment>
  <div
    className="form__group"
  >
    <FormLabel
      className="control__label"
      idGuid="id-guid-1"
      required={false}
    >
      My label
    </FormLabel>
    <div
      className="controls"
    >
      <Checkbox
        ariaDescribedby="help-guid-1"
        className="form__control checkbox"
        idGuid="id-guid-1"
        key=".0"
        required={false}
        test="test"
        type="checkbox"
      />
      <ErrorBlock
        errorGuid="error-guid-1"
      />
      <HelpBlock
        helpGuid="help-guid-1"
      >
        foo
      </HelpBlock>
    </div>
  </div>
</Fragment>
`;

exports[`renders the basic input 1`] = `
<input
  class="form__control checkbox"
  type="checkbox"
/>
`;

exports[`renders the basic input with aria-describedby 1`] = `
<input
  aria-describedby="foo"
  class="form__control checkbox"
  type="checkbox"
/>
`;

exports[`renders the basic input with id 1`] = `
<input
  class="form__control checkbox"
  id="foo"
  type="checkbox"
/>
`;

exports[`renders the basic input with idGuid 1`] = `
<input
  class="form__control checkbox"
  id="bar"
  type="checkbox"
/>
`;

exports[`renders the basic input with placeholder 1`] = `
<input
  class="form__control checkbox"
  placeholder="foo"
  type="checkbox"
/>
`;

exports[`renders the basic input with required 1`] = `
<input
  class="form__control checkbox"
  required=""
  type="checkbox"
/>
`;

exports[`will prefer id over idGuid 1`] = `
<input
  class="form__control checkbox"
  id="foo"
  type="checkbox"
/>
`;
